# NeoVimBuilder

./: .deepsource.toml  .gitignore  pyproject.toml
src/neovim-config-build/generate/: logger.py  theme.py
src/neovim-config-build/generate/presets/: theme_preset.lua
src/neovim_config_build/: cli.py
src/neovim_config_build/generate/: logger.py  theme.py
