[project]
name = "neovim-config-build"
version = "0.1.0"
description = "Tool for build your Neovim config through CLI!"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Silletr", email = "silletrMain@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["typer>=0.24.1,<0.25.0", "vhs>=1.1.1,<2.0.0", "flet (>=0.84.0,<0.85.0)"]

[tool.poetry]
scripts = { nvim-cfg-build = "neovim-config-build.__main__:app" }

packages = [{ include = "neovim-config-build", from = "src" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
